# axio

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  timeoutEcho.cpp  tt
include/: ExtDispatcher.h  bufReader.h  channel.h  dispatcher.h  emitter.h  event.h  socket.h  stdin.h  timer.h
src/: CMakeLists.txt  emitter.cpp  socket.cpp  stdin.cpp  timer.cpp
tests/: CMakeLists.txt  channel.cpp  socketUNIX.cpp  timer.cpp
